--- a/css/css.css
+++ b/css/css.css
@@ -438,6 +438,30 @@ and open the template in the editor.
     display:block;
 }
 
+
+/*---combat tab---*/
+
+/*stimpack elements */
+
+.stimuse input
+{
+    display:none;
+}
+
+.stimuse .pip
+{
+    border:1px black solid;
+    height:20px;
+    width:25px;
+    background-color: green;
+    transition: 0.4s
+}
+
+.pip + input:checked
+{
+background-color:transparent;
+}
+
 /* ---diceroller dialog--- */
 
 .roller userinput
