--- a/css/css.css
+++ b/css/css.css
@@ -20,9 +20,11 @@ and open the template in the editor.
 
 }
 
+/* --- general sheet stuff--- */
+
 /* sheet bg */
 
-.sheetbg
+.sheet .sheetbg
 {
 
     width: 100%;
@@ -31,6 +33,19 @@ and open the template in the editor.
     background-size: 100% 100%;
     background-repeat:repeat-y;
 
+}
+
+.sheet p,label,input
+{
+font-family: "abel";
+font-size:11pt
+}
+
+.sheet h1
+{
+    font-family: "abel";
+    font-size:18pt;
+    text-transform:uppercase;
 }
 
 /* for the charsheet top */
@@ -448,7 +463,7 @@ and open the template in the editor.
     position: relative;
     display:inline-block;
     height:20px;
-    width:25px;
+    width:20%;
 }
 
 .stimuse input
@@ -465,8 +480,9 @@ and open the template in the editor.
     bottom:0;
     content:"";
     border:1px black solid;
+    border-radius: 12px;
     height:20px;
-    width:25px;
+    width:100%;
 
     transition-duration: 0.4s;
     -webkit-transition-duration: 0.4s
@@ -675,6 +691,13 @@ table p
     font-size: 10pt;
     text-transform: uppercase;
     text-align: left;
+}
+
+.table .heading
+{
+    font-family:"abel";
+    margin-bottom:-1px;
+    border-bottom: 1px dotted black;
 }
 
 .prodie
