--- a/css/css.css
+++ b/css/css.css
@@ -593,8 +593,7 @@ input:checked + .pip
     font-family: "abel";
     color:white;
     text-transform: uppercase;
-    padding-left:2px;
-    padding-right:2px;
+    padding:2px;
 
 }
 
@@ -657,14 +656,12 @@ input:checked + .pip
 
  .table .start
 {border-left:1px solid black;
-    margin-left:-1px;
 border-right:1px dashed black;
-margin-right:-1px}
+margin-left:-1px}
 
  .table  .midrow
 {
     border-right: 1px dashed black;
-    margin-right: -1px;
 }
 
  .table .end
@@ -827,13 +824,13 @@ transform: translateX(18px)}
     background:pink;
     background-size: 100% 100%;
     min-width:100%;
-    min-height:375px
+    min-height:350 px
 }
 
 .itemcard .leftside
 {
     width: 40%;
-    height: 375px;
+    height: 325px;
     background-color:rgba(128,128,128,0.8);
     padding-left: 3px;
     padding-right: 3px;
@@ -843,6 +840,7 @@ transform: translateX(18px)}
 
 .itemcard .weapontabs
 {
+    min-height:45px;
     margin-bottom: 2px;
 
     border-bottom: 2px black solid;
@@ -851,7 +849,7 @@ transform: translateX(18px)}
 .itemcard .rightside
 {
     background-size: 100% 100%;
-    height: 375px;
+    height: 325px;
     width:100%;
     margin-left:5px
 }
@@ -874,7 +872,7 @@ transform: translateX(18px)}
     margin-top:5px;
     padding:2px;
     width: 100%;
-    height: 275px;
+    height: 250px;
 }
 
 .itemcard p
